Working on problem 2 and added the data set for problem 3.

--- a/yeomans_ps4.qmd
+++ b/yeomans_ps4.qmd
@@ -69,25 +69,43 @@ who_won_what
 
 Use the “ATP Matches” data from 2019
 
-a.
+```{r}
+atp <- read.csv("https://raw.githubusercontent.com/JeffSackmann/tennis_atp/refs/heads/master/atp_matches_2019.csv")
+
+```
+
+a. How many tournaments took place in 2019?
+
+```{r}
+tournaments <- atp %>%
+              summarize(num_tourn = n_distinct(tourney_id))
+              
+tournaments
+
+```
+There were a toal of 128 tournaments in the year 2019. 
+
+b. Did any player win more than one tournament? If so, how many players won more than one tournament, and how many tournaments did the most winning player(s) win?
+
+```{r}
+play_win <- atp %>%
+            group_by(winner_name) %>%
+            summarize(wins = n()) %>%
+            filter(wins > 1) %>%
+            arrange(desc(wins)) %>%
+            ungroup()
+play_win
+```
+We do see that some players won multiple tournaments. In total 171 players won more than one tournament and the player with the most amount of wins was Rafael Nadal. 
+
+
+c. Is there any evidence that winners have more aces than losers? (If you address this with a hypothesis test, do not use base R functionality - continue to remain in the Tidyverse.)
 
 ```{r}
 
 ```
 
-b.
-
-```{r}
-
-```
-
-c.
-
-```{r}
-
-```
-
-d.
+d. Identify the player(s) with the highest win-rate. (Note that this is NOT asking for the highest number of wins.) Restrict to players with at least 5 matches.
 
 ```{r}
 
@@ -101,19 +119,24 @@ d.
 
 Use the NYTimes Covid data
 
-a.
+```{r}
+nyt <- read.csv("https://raw.githubusercontent.com/nytimes/covid-19-data/refs/heads/master/rolling-averages/us.csv")
+
+```
+
+a. How many major and minor spikes in cases were there?
 
 ```{r}
 
 ```
 
-b.
+b. For the states with the highest and lowest overall rates per population, what differences do you see in their trajectories over time?
 
 ```{r}
 
 ```
 
-c.
+c. Identify, to the best of your ability without a formal test, the first five states to experience Covid in a substantial way.
 
 ```{r}
 
